zamna-spin/bindings/http_trigger.h

typedef struct http_trigger_string_t {
  uint8_t*ptr;
  size_t len;
} http_trigger_string_t;
// A duration of time, in nanoseconds.
typedef uint64_t wasi_clocks_0_2_0_monotonic_clock_duration_t;
typedef struct wasi_io_0_2_0_error_borrow_error_t {
  int32_t __handle;
} wasi_io_0_2_0_error_borrow_error_t;
typedef struct wasi_io_0_2_0_streams_own_input_stream_t {
  int32_t __handle;
} wasi_io_0_2_0_streams_own_input_stream_t;
typedef wasi_clocks_0_2_0_monotonic_clock_duration_t wasi_http_0_2_0_types_duration_t;
// This type corresponds to HTTP standard Related Schemes.
typedef struct wasi_http_0_2_0_types_scheme_t {
  uint8_t tag;
  union {
    http_trigger_string_t     other;
  } val;
} wasi_http_0_2_0_types_scheme_t;
typedef struct {
  bool is_some;
  http_trigger_string_t val;
} http_trigger_option_string_t;
typedef struct {
  bool is_some;
  uint16_t val;
} http_trigger_option_u16_t;
// Defines the case payload type for `DNS-error` above:
typedef struct wasi_http_0_2_0_types_dns_error_payload_t {
  http_trigger_option_string_t   rcode;
  http_trigger_option_u16_t   info_code;
} wasi_http_0_2_0_types_dns_error_payload_t;
typedef struct {
  bool is_some;
  uint8_t val;
} http_trigger_option_u8_t;
// Defines the case payload type for `TLS-alert-received` above:
typedef struct wasi_http_0_2_0_types_tls_alert_received_payload_t {
  http_trigger_option_u8_t   alert_id;
  http_trigger_option_string_t   alert_message;
} wasi_http_0_2_0_types_tls_alert_received_payload_t;
typedef struct {
  bool is_some;
  uint32_t val;
} http_trigger_option_u32_t;
// Defines the case payload type for `HTTP-response-{header,trailer}-size` above:
typedef struct wasi_http_0_2_0_types_field_size_payload_t {
  http_trigger_option_string_t   field_name;
  http_trigger_option_u32_t   field_size;
} wasi_http_0_2_0_types_field_size_payload_t;
typedef struct {
  bool is_some;
  uint64_t val;
} http_trigger_option_u64_t;
typedef struct {
  bool is_some;
  wasi_http_0_2_0_types_field_size_payload_t val;
} wasi_http_0_2_0_types_option_field_size_payload_t;
// These cases are inspired by the IANA HTTP Proxy Error Types:
//   https://www.iana.org/assignments/http-proxy-status/http-proxy-status.xhtml#table-http-proxy-error-types
typedef struct wasi_http_0_2_0_types_error_code_t {
  uint8_t tag;
  union {
    wasi_http_0_2_0_types_dns_error_payload_t     dns_error;
    wasi_http_0_2_0_types_tls_alert_received_payload_t     tls_alert_received;
    http_trigger_option_u64_t     http_request_body_size;
    http_trigger_option_u32_t     http_request_header_section_size;
    wasi_http_0_2_0_types_option_field_size_payload_t     http_request_header_size;
    http_trigger_option_u32_t     http_request_trailer_section_size;
    wasi_http_0_2_0_types_field_size_payload_t     http_request_trailer_size;
    http_trigger_option_u32_t     http_response_header_section_size;
    wasi_http_0_2_0_types_field_size_payload_t     http_response_header_size;
    http_trigger_option_u64_t     http_response_body_size;
    http_trigger_option_u32_t     http_response_trailer_section_size;
    wasi_http_0_2_0_types_field_size_payload_t     http_response_trailer_size;
    http_trigger_option_string_t     http_response_transfer_coding;
    http_trigger_option_string_t     http_response_content_coding;
    http_trigger_option_string_t     internal_error;
  } val;
} wasi_http_0_2_0_types_error_code_t;
// This type enumerates the different kinds of errors that may occur when
// setting or appending to a `fields` resource.
typedef struct wasi_http_0_2_0_types_header_error_t {
  uint8_t tag;
} wasi_http_0_2_0_types_header_error_t;
// Field keys are always strings.
typedef http_trigger_string_t wasi_http_0_2_0_types_field_key_t;
// Field values should always be ASCII strings. However, in
// reality, HTTP implementations often have to interpret malformed values,
// so they are provided as a list of bytes.
typedef struct wasi_http_0_2_0_types_field_value_t {
  uint8_t   *ptr;
  size_t len;
} wasi_http_0_2_0_types_field_value_t;
typedef struct wasi_http_0_2_0_types_own_fields_t {
  int32_t __handle;
} wasi_http_0_2_0_types_own_fields_t;
typedef struct wasi_http_0_2_0_types_borrow_fields_t {
  int32_t __handle;
} wasi_http_0_2_0_types_borrow_fields_t;
typedef struct wasi_http_0_2_0_types_own_incoming_request_t {
  int32_t __handle;
} wasi_http_0_2_0_types_own_incoming_request_t;
typedef struct wasi_http_0_2_0_types_borrow_incoming_request_t {
  int32_t __handle;
} wasi_http_0_2_0_types_borrow_incoming_request_t;
typedef struct wasi_http_0_2_0_types_own_outgoing_request_t {
  int32_t __handle;
} wasi_http_0_2_0_types_own_outgoing_request_t;
typedef struct wasi_http_0_2_0_types_borrow_outgoing_request_t {
  int32_t __handle;
} wasi_http_0_2_0_types_borrow_outgoing_request_t;
typedef struct wasi_http_0_2_0_types_own_request_options_t {
  int32_t __handle;
} wasi_http_0_2_0_types_own_request_options_t;
typedef struct wasi_http_0_2_0_types_borrow_request_options_t {
  int32_t __handle;
} wasi_http_0_2_0_types_borrow_request_options_t;
typedef struct wasi_http_0_2_0_types_own_response_outparam_t {
  int32_t __handle;
} wasi_http_0_2_0_types_own_response_outparam_t;
typedef struct wasi_http_0_2_0_types_borrow_response_outparam_t {
  int32_t __handle;
} wasi_http_0_2_0_types_borrow_response_outparam_t;
// This type corresponds to the HTTP standard Status Code.
typedef uint16_t wasi_http_0_2_0_types_status_code_t;
typedef struct wasi_http_0_2_0_types_own_incoming_response_t {
  int32_t __handle;
} wasi_http_0_2_0_types_own_incoming_response_t;
typedef struct wasi_http_0_2_0_types_borrow_incoming_response_t {
  int32_t __handle;
} wasi_http_0_2_0_types_borrow_incoming_response_t;
typedef struct wasi_http_0_2_0_types_own_incoming_body_t {
  int32_t __handle;
} wasi_http_0_2_0_types_own_incoming_body_t;
typedef struct wasi_http_0_2_0_types_borrow_incoming_body_t {
  int32_t __handle;
} wasi_http_0_2_0_types_borrow_incoming_body_t;
typedef struct wasi_http_0_2_0_types_own_future_trailers_t {
  int32_t __handle;
} wasi_http_0_2_0_types_own_future_trailers_t;
typedef struct wasi_http_0_2_0_types_borrow_future_trailers_t {
  int32_t __handle;
} wasi_http_0_2_0_types_borrow_future_trailers_t;
typedef struct wasi_http_0_2_0_types_own_outgoing_response_t {
  int32_t __handle;
} wasi_http_0_2_0_types_own_outgoing_response_t;
typedef struct wasi_http_0_2_0_types_borrow_outgoing_response_t {
  int32_t __handle;
} wasi_http_0_2_0_types_borrow_outgoing_response_t;
typedef struct wasi_http_0_2_0_types_own_outgoing_body_t {
  int32_t __handle;
} wasi_http_0_2_0_types_own_outgoing_body_t;
typedef struct wasi_http_0_2_0_types_borrow_outgoing_body_t {
  int32_t __handle;
} wasi_http_0_2_0_types_borrow_outgoing_body_t;
typedef struct wasi_http_0_2_0_types_own_future_incoming_response_t {
  int32_t __handle;
} wasi_http_0_2_0_types_own_future_incoming_response_t;
typedef struct wasi_http_0_2_0_types_borrow_future_incoming_response_t {
  int32_t __handle;
} wasi_http_0_2_0_types_borrow_future_incoming_response_t;
typedef wasi_io_0_2_0_error_borrow_error_t wasi_http_0_2_0_types_borrow_io_error_t;
typedef struct {
  bool is_some;
  wasi_http_0_2_0_types_error_code_t val;
} wasi_http_0_2_0_types_option_error_code_t;
typedef struct {
  wasi_http_0_2_0_types_field_key_t f0;
  wasi_http_0_2_0_types_field_value_t f1;
} http_trigger_tuple2_field_key_field_value_t;
typedef struct {
  http_trigger_tuple2_field_key_field_value_t *ptr;
  size_t len;
} http_trigger_list_tuple2_field_key_field_value_t;
typedef struct {
  bool is_err;
  union {
    wasi_http_0_2_0_types_own_fields_t ok;
    wasi_http_0_2_0_types_header_error_t err;
  } val;
} wasi_http_0_2_0_types_result_own_fields_header_error_t;
typedef struct {
  wasi_http_0_2_0_types_field_value_t *ptr;
  size_t len;
} http_trigger_list_field_value_t;
typedef struct {
  bool is_err;
  union {
    wasi_http_0_2_0_types_header_error_t err;
  } val;
} wasi_http_0_2_0_types_result_void_header_error_t;
typedef struct {
  bool is_some;
  wasi_http_0_2_0_types_scheme_t val;
} wasi_http_0_2_0_types_option_scheme_t;
typedef wasi_http_0_2_0_types_own_fields_t wasi_http_0_2_0_types_own_headers_t;
typedef struct {
  bool is_err;
  union {
    wasi_http_0_2_0_types_own_incoming_body_t ok;
  } val;
} wasi_http_0_2_0_types_result_own_incoming_body_void_t;
typedef struct {
  bool is_err;
  union {
    wasi_http_0_2_0_types_own_outgoing_body_t ok;
  } val;
} wasi_http_0_2_0_types_result_own_outgoing_body_void_t;
typedef struct {
  bool is_err;
} wasi_http_0_2_0_types_result_void_void_t;
typedef struct {
  bool is_some;
  wasi_http_0_2_0_types_duration_t val;
} http_trigger_option_duration_t;
typedef struct {
  bool is_err;
  union {
    wasi_http_0_2_0_types_own_outgoing_response_t ok;
    wasi_http_0_2_0_types_error_code_t err;
  } val;
} wasi_http_0_2_0_types_result_own_outgoing_response_error_code_t;
typedef wasi_io_0_2_0_streams_own_input_stream_t wasi_http_0_2_0_types_own_input_stream_t;