zamna-spin/.zig-cache/o/74caa4b4e0853821cf59f10746e95f75/cimport.zig

pub const wasi_http_0_2_0_types_tls_alert_received_payload_t = struct_wasi_http_0_2_0_types_tls_alert_received_payload_t;
pub const http_trigger_option_u32_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: u32 = @import("std").mem.zeroes(u32),
};
pub const struct_wasi_http_0_2_0_types_field_size_payload_t = extern struct {
    field_name: http_trigger_option_string_t = @import("std").mem.zeroes(http_trigger_option_string_t),
    field_size: http_trigger_option_u32_t = @import("std").mem.zeroes(http_trigger_option_u32_t),
};
pub const wasi_http_0_2_0_types_field_size_payload_t = struct_wasi_http_0_2_0_types_field_size_payload_t;
pub const http_trigger_option_u64_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: u64 = @import("std").mem.zeroes(u64),
};
pub const wasi_http_0_2_0_types_option_field_size_payload_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: wasi_http_0_2_0_types_field_size_payload_t = @import("std").mem.zeroes(wasi_http_0_2_0_types_field_size_payload_t),
};
const union_unnamed_7 = extern union {
    dns_error: wasi_http_0_2_0_types_dns_error_payload_t,
    tls_alert_received: wasi_http_0_2_0_types_tls_alert_received_payload_t,
    http_request_body_size: http_trigger_option_u64_t,
    http_request_header_section_size: http_trigger_option_u32_t,
    http_request_header_size: wasi_http_0_2_0_types_option_field_size_payload_t,
    http_request_trailer_section_size: http_trigger_option_u32_t,
    http_request_trailer_size: wasi_http_0_2_0_types_field_size_payload_t,
    http_response_header_section_size: http_trigger_option_u32_t,
    http_response_header_size: wasi_http_0_2_0_types_field_size_payload_t,
    http_response_body_size: http_trigger_option_u64_t,
    http_response_trailer_section_size: http_trigger_option_u32_t,
    http_response_trailer_size: wasi_http_0_2_0_types_field_size_payload_t,
    http_response_transfer_coding: http_trigger_option_string_t,
    http_response_content_coding: http_trigger_option_string_t,
    internal_error: http_trigger_option_string_t,
};
pub const struct_wasi_http_0_2_0_types_error_code_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_7 = @import("std").mem.zeroes(union_unnamed_7),
};
pub const wasi_http_0_2_0_types_error_code_t = struct_wasi_http_0_2_0_types_error_code_t;
pub const struct_wasi_http_0_2_0_types_header_error_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
};
pub const wasi_http_0_2_0_types_header_error_t = struct_wasi_http_0_2_0_types_header_error_t;
pub const wasi_http_0_2_0_types_field_key_t = http_trigger_string_t;
pub const struct_wasi_http_0_2_0_types_field_value_t = extern struct {
    ptr: [*c]u8 = @import("std").mem.zeroes([*c]u8),
    len: usize = @import("std").mem.zeroes(usize),
};
pub const wasi_http_0_2_0_types_field_value_t = struct_wasi_http_0_2_0_types_field_value_t;
pub const struct_wasi_http_0_2_0_types_own_fields_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_own_fields_t = struct_wasi_http_0_2_0_types_own_fields_t;
pub const struct_wasi_http_0_2_0_types_borrow_fields_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_borrow_fields_t = struct_wasi_http_0_2_0_types_borrow_fields_t;
pub const struct_wasi_http_0_2_0_types_own_incoming_request_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_own_incoming_request_t = struct_wasi_http_0_2_0_types_own_incoming_request_t;
pub const struct_wasi_http_0_2_0_types_borrow_incoming_request_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_borrow_incoming_request_t = struct_wasi_http_0_2_0_types_borrow_incoming_request_t;
pub const struct_wasi_http_0_2_0_types_own_outgoing_request_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_own_outgoing_request_t = struct_wasi_http_0_2_0_types_own_outgoing_request_t;
pub const struct_wasi_http_0_2_0_types_borrow_outgoing_request_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_borrow_outgoing_request_t = struct_wasi_http_0_2_0_types_borrow_outgoing_request_t;
pub const struct_wasi_http_0_2_0_types_own_request_options_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_own_request_options_t = struct_wasi_http_0_2_0_types_own_request_options_t;
pub const struct_wasi_http_0_2_0_types_borrow_request_options_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_borrow_request_options_t = struct_wasi_http_0_2_0_types_borrow_request_options_t;
pub const struct_wasi_http_0_2_0_types_own_response_outparam_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_own_response_outparam_t = struct_wasi_http_0_2_0_types_own_response_outparam_t;
pub const struct_wasi_http_0_2_0_types_borrow_response_outparam_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_borrow_response_outparam_t = struct_wasi_http_0_2_0_types_borrow_response_outparam_t;
pub const wasi_http_0_2_0_types_status_code_t = u16;
pub const struct_wasi_http_0_2_0_types_own_incoming_response_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_own_incoming_response_t = struct_wasi_http_0_2_0_types_own_incoming_response_t;
pub const struct_wasi_http_0_2_0_types_borrow_incoming_response_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_borrow_incoming_response_t = struct_wasi_http_0_2_0_types_borrow_incoming_response_t;
pub const struct_wasi_http_0_2_0_types_own_incoming_body_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_own_incoming_body_t = struct_wasi_http_0_2_0_types_own_incoming_body_t;
pub const struct_wasi_http_0_2_0_types_borrow_incoming_body_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_borrow_incoming_body_t = struct_wasi_http_0_2_0_types_borrow_incoming_body_t;
pub const struct_wasi_http_0_2_0_types_own_future_trailers_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_own_future_trailers_t = struct_wasi_http_0_2_0_types_own_future_trailers_t;
pub const struct_wasi_http_0_2_0_types_borrow_future_trailers_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_borrow_future_trailers_t = struct_wasi_http_0_2_0_types_borrow_future_trailers_t;
pub const struct_wasi_http_0_2_0_types_own_outgoing_response_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_own_outgoing_response_t = struct_wasi_http_0_2_0_types_own_outgoing_response_t;
pub const struct_wasi_http_0_2_0_types_borrow_outgoing_response_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_borrow_outgoing_response_t = struct_wasi_http_0_2_0_types_borrow_outgoing_response_t;
pub const struct_wasi_http_0_2_0_types_own_outgoing_body_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_own_outgoing_body_t = struct_wasi_http_0_2_0_types_own_outgoing_body_t;
pub const struct_wasi_http_0_2_0_types_borrow_outgoing_body_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_borrow_outgoing_body_t = struct_wasi_http_0_2_0_types_borrow_outgoing_body_t;
pub const struct_wasi_http_0_2_0_types_own_future_incoming_response_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_own_future_incoming_response_t = struct_wasi_http_0_2_0_types_own_future_incoming_response_t;
pub const struct_wasi_http_0_2_0_types_borrow_future_incoming_response_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_http_0_2_0_types_borrow_future_incoming_response_t = struct_wasi_http_0_2_0_types_borrow_future_incoming_response_t;
pub const wasi_http_0_2_0_types_borrow_io_error_t = wasi_io_0_2_0_error_borrow_error_t;
pub const wasi_http_0_2_0_types_option_error_code_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: wasi_http_0_2_0_types_error_code_t = @import("std").mem.zeroes(wasi_http_0_2_0_types_error_code_t),
};
pub const http_trigger_tuple2_field_key_field_value_t = extern struct {
    f0: wasi_http_0_2_0_types_field_key_t = @import("std").mem.zeroes(wasi_http_0_2_0_types_field_key_t),
    f1: wasi_http_0_2_0_types_field_value_t = @import("std").mem.zeroes(wasi_http_0_2_0_types_field_value_t),
};
pub const http_trigger_list_tuple2_field_key_field_value_t = extern struct {
    ptr: [*c]http_trigger_tuple2_field_key_field_value_t = @import("std").mem.zeroes([*c]http_trigger_tuple2_field_key_field_value_t),
    len: usize = @import("std").mem.zeroes(usize),
};
const union_unnamed_8 = extern union {
    ok: wasi_http_0_2_0_types_own_fields_t,
    err: wasi_http_0_2_0_types_header_error_t,
};
pub const wasi_http_0_2_0_types_result_own_fields_header_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_8 = @import("std").mem.zeroes(union_unnamed_8),
};
pub const http_trigger_list_field_value_t = extern struct {
    ptr: [*c]wasi_http_0_2_0_types_field_value_t = @import("std").mem.zeroes([*c]wasi_http_0_2_0_types_field_value_t),
    len: usize = @import("std").mem.zeroes(usize),
};
const union_unnamed_9 = extern union {
    err: wasi_http_0_2_0_types_header_error_t,
};
pub const wasi_http_0_2_0_types_result_void_header_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_9 = @import("std").mem.zeroes(union_unnamed_9),
};
pub const wasi_http_0_2_0_types_option_scheme_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: wasi_http_0_2_0_types_scheme_t = @import("std").mem.zeroes(wasi_http_0_2_0_types_scheme_t),
};
pub const wasi_http_0_2_0_types_own_headers_t = wasi_http_0_2_0_types_own_fields_t;
const union_unnamed_10 = extern union {
    ok: wasi_http_0_2_0_types_own_incoming_body_t,
};
pub const wasi_http_0_2_0_types_result_own_incoming_body_void_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_10 = @import("std").mem.zeroes(union_unnamed_10),
};
const union_unnamed_11 = extern union {
    ok: wasi_http_0_2_0_types_own_outgoing_body_t,
};
pub const wasi_http_0_2_0_types_result_own_outgoing_body_void_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_11 = @import("std").mem.zeroes(union_unnamed_11),
};
pub const wasi_http_0_2_0_types_result_void_void_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
};
pub const http_trigger_option_duration_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: wasi_http_0_2_0_types_duration_t = @import("std").mem.zeroes(wasi_http_0_2_0_types_duration_t),
};
const union_unnamed_12 = extern union {
    ok: wasi_http_0_2_0_types_own_outgoing_response_t,
    err: wasi_http_0_2_0_types_error_code_t,
};
pub const wasi_http_0_2_0_types_result_own_outgoing_response_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_12 = @import("std").mem.zeroes(union_unnamed_12),
};
pub const wasi_http_0_2_0_types_own_input_stream_t = wasi_io_0_2_0_streams_own_input_stream_t;
